--- a/.env
+++ b/.env
@@ -1,9 +1,14 @@
 # 数据库配置
-DB_ADDR=localhost
-DB_PORT=3306
-DB_USER=root
-DB_PASSWD=7tvkPQzKGe1Syv5E
-DB_NAME=sso
+DB_ADDR=
+DB_PORT=
+DB_USER=
+DB_PASSWD=
+DB_NAME=
 
+#redis配置
+REDIS_PORT=
+REDIS_HOST=
+REDIS_PWD=
+REDIS_DB=
 # 应用配置
-SERVER_PORT=8080
+SERVER_PORT=
