fix bugs: db Placeholder

--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 # 数据库配置
-DB_ADDR=
-DB_PORT=
-DB_USER=
-DB_PASSWD=
-DB_NAME=
+DB_ADDR=10.191.31.113
+DB_PORT=5432
+DB_USER=abdn_sso
+DB_PASSWD=7tvkPQzKGe1Syv5E
+DB_NAME=sso
 
 #redis配置
-REDIS_PORT=
-REDIS_HOST=
+REDIS_PORT=6379
+REDIS_HOST=localhost
 REDIS_PWD=
-REDIS_DB=
+REDIS_DB=0
 # 应用配置
-SERVER_PORT=
+SERVER_PORT=8080
